Unset CONFIG_FIVE_PA_FEATURE.
Process authentication no longer works with a custom kernel, so we
should remove the feature. This should have happened while APGK was
still in beta, but somehow I overlooked it.

The patch to fix the build when this feature is disabled was already
added in 6b8206ecb1440174653a4cfb538b2ada979c6b97 on 2018-10-01.

Note that disabling this feature does not obviate the need for the
process authenticator daemon (proca) to be stopped at boot time (in
init.local.rc in the ramdisk).

--- a/arch/arm64/configs/exynos9810-star2lte_calikernel_defconfig
+++ b/arch/arm64/configs/exynos9810-star2lte_calikernel_defconfig
@@ -5532,7 +5532,7 @@ CONFIG_FIVE_DEFAULT_HASH_SHA1=y
 # CONFIG_FIVE_DEFAULT_HASH_SHA256 is not set
 # CONFIG_FIVE_DEFAULT_HASH_SHA512 is not set
 CONFIG_FIVE_DEFAULT_HASH="sha1"
-CONFIG_FIVE_PA_FEATURE=y
+# CONFIG_FIVE_PA_FEATURE is not set
 # CONFIG_TZ_ICCC is not set
 CONFIG_DEFAULT_SECURITY_SELINUX=y
 # CONFIG_DEFAULT_SECURITY_DAC is not set
