--- a/arch/arm64/configs/exynos9810-starlte_calikernel_defconfig
+++ b/arch/arm64/configs/exynos9810-starlte_calikernel_defconfig
@@ -5532,7 +5532,7 @@ CONFIG_FIVE_DEFAULT_HASH_SHA1=y
 # CONFIG_FIVE_DEFAULT_HASH_SHA256 is not set
 # CONFIG_FIVE_DEFAULT_HASH_SHA512 is not set
 CONFIG_FIVE_DEFAULT_HASH="sha1"
-CONFIG_FIVE_PA_FEATURE=y
+# CONFIG_FIVE_PA_FEATURE is not set
 # CONFIG_TZ_ICCC is not set
 CONFIG_DEFAULT_SECURITY_SELINUX=y
 # CONFIG_DEFAULT_SECURITY_DAC is not set
